// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isOpen: false and compact: false 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
slot:not([name]), p {
  display: block;
  margin: 0;
  min-width: 0;
  min-height: 0;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  padding: var(--p-popover-py,calc(12 * var(--p-spacing-static-2xs))) var(--p-popover-px,var(--p-spacing-static-md));
  overflow: hidden auto;
  overscroll-behavior-y: none;
}
button {
  all: unset;
  display: inline-grid;
  vertical-align: top;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  border-radius: var(--p-radius-full);
  cursor: pointer;
  background: var(--p-color-frosted);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::after {
  content: "";
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  background: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  top: 0;
  left: 0;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0 0 transparent);
  border-radius: var(--p-popover-radius,var(--p-radius-xl));
  background: var(--p-color-canvas);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  width: var(--p-popover-w,max-content);
  height: var(--p-popover-h,auto);
  min-width: var(--p-popover-min-w,0px);
  min-height: var(--p-popover-min-h,auto);
  max-width: var(--p-popover-max-w,min(calc(100dvw - 16px), 48ch));
  max-height: var(--p-popover-max-h,calc(100dvh - 16px));
  opacity: 0;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  overlay: none;
  display: none;
}
[popover]:popover-open {
  overlay: auto;
  display: grid;
}
[popover]::backdrop {
  display: none;
}
@media(forced-colors:active) {
  button::after {
    background: CanvasText;
  }
  button:focus-visible {
    outline-color: Highlight;
  }
  [popover] {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}

@media(hover:hover) {
  button:hover {
    background: var(--p-color-frosted-soft);
  }
}

@supports (color: oklch(from red l c h)) {
  [popover] {
    background: hsl(from var(--p-color-canvas) h 0% calc(l + 14));
  }
}

@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  [popover] {
    transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out),overlay var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out) allow-discrete,display var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out) allow-discrete;
  }
}

.arrow {
  position: absolute;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: inherit;
}
@media(forced-colors:active) {
  .arrow {
    background: CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: false and compact: true 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
slot:not([name]), p {
  display: block;
  margin: 0;
  min-width: 0;
  min-height: 0;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  padding: var(--p-popover-py,var(--p-spacing-static-xs)) var(--p-popover-px,var(--p-spacing-static-sm));
  overflow: hidden auto;
  overscroll-behavior-y: none;
}
button {
  all: unset;
  display: inline-grid;
  vertical-align: top;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  border-radius: var(--p-radius-full);
  cursor: pointer;
  background: var(--p-color-frosted);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::after {
  content: "";
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  background: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  top: 0;
  left: 0;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0 0 transparent);
  border-radius: var(--p-popover-radius,var(--p-radius-lg));
  background: var(--p-color-canvas);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  width: var(--p-popover-w,max-content);
  height: var(--p-popover-h,auto);
  min-width: var(--p-popover-min-w,0px);
  min-height: var(--p-popover-min-h,auto);
  max-width: var(--p-popover-max-w,min(calc(100dvw - 16px), 48ch));
  max-height: var(--p-popover-max-h,calc(100dvh - 16px));
  opacity: 0;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out);
  overlay: none;
  display: none;
}
[popover]:popover-open {
  overlay: auto;
  display: grid;
}
[popover]::backdrop {
  display: none;
}
@media(forced-colors:active) {
  button::after {
    background: CanvasText;
  }
  button:focus-visible {
    outline-color: Highlight;
  }
  [popover] {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}

@media(hover:hover) {
  button:hover {
    background: var(--p-color-frosted-soft);
  }
}

@supports (color: oklch(from red l c h)) {
  [popover] {
    background: hsl(from var(--p-color-canvas) h 0% calc(l + 14));
  }
}

@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  [popover] {
    transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out),overlay var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out) allow-discrete,display var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-out) allow-discrete;
  }
}

.arrow {
  position: absolute;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: inherit;
}
@media(forced-colors:active) {
  .arrow {
    background: CanvasText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isOpen: true and compact: false 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
slot:not([name]), p {
  display: block;
  margin: 0;
  min-width: 0;
  min-height: 0;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  padding: var(--p-popover-py,calc(12 * var(--p-spacing-static-2xs))) var(--p-popover-px,var(--p-spacing-static-md));
  overflow: hidden auto;
  overscroll-behavior-y: none;
}
button {
  all: unset;
  display: inline-grid;
  vertical-align: top;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  border-radius: var(--p-radius-full);
  cursor: pointer;
  background: var(--p-color-frosted);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::after {
  content: "";
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  background: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  top: 0;
  left: 0;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0 0 transparent);
  border-radius: var(--p-popover-radius,var(--p-radius-xl));
  background: var(--p-color-canvas);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  width: var(--p-popover-w,max-content);
  height: var(--p-popover-h,auto);
  min-width: var(--p-popover-min-w,0px);
  min-height: var(--p-popover-min-h,auto);
  max-width: var(--p-popover-max-w,min(calc(100dvw - 16px), 48ch));
  max-height: var(--p-popover-max-h,calc(100dvh - 16px));
  opacity: 1;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in);
  overlay: none;
  display: none;
}
[popover]:popover-open {
  overlay: auto;
  display: grid;
}
[popover]::backdrop {
  display: none;
}
@media(forced-colors:active) {
  button::after {
    background: CanvasText;
  }
  button:focus-visible {
    outline-color: Highlight;
  }
  [popover] {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}

@media(hover:hover) {
  button:hover {
    background: var(--p-color-frosted-soft);
  }
}

@supports (color: oklch(from red l c h)) {
  [popover] {
    background: hsl(from var(--p-color-canvas) h 0% calc(l + 14));
  }
}

@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  [popover] {
    transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in),overlay var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in) allow-discrete,display var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in) allow-discrete;
  }
}

.arrow {
  position: absolute;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: inherit;
}
@media(forced-colors:active) {
  .arrow {
    background: CanvasText;
  }
}

@starting-style {
  [popover] {
    opacity: 0;
  }
}"
`;

exports[`getComponentCss() > should return correct css for isOpen: true and compact: true 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
slot:not([name]), p {
  display: block;
  margin: 0;
  min-width: 0;
  min-height: 0;
  max-width: inherit;
  max-height: inherit;
  box-sizing: border-box;
  padding: var(--p-popover-py,var(--p-spacing-static-xs)) var(--p-popover-px,var(--p-spacing-static-sm));
  overflow: hidden auto;
  overscroll-behavior-y: none;
}
button {
  all: unset;
  display: inline-grid;
  vertical-align: top;
  font: var(--p-typescale-sm) var(--p-font-porsche-next);
  width: var(--p-leading-normal);
  height: var(--p-leading-normal);
  border-radius: var(--p-radius-full);
  cursor: pointer;
  background: var(--p-color-frosted);
  transition: background-color var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
button::after {
  content: "";
  -webkit-mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  mask: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12.5 10v6h-1v-6zm0-2v1h-1V8zM12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16m0-1c-4.95 0-9 4.05-9 9s4.05 9 9 9 9-4.05 9-9-4.05-9-9-9"/></svg>') center/contain no-repeat;
  background: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  top: 0;
  left: 0;
  filter: drop-shadow(0 0 16px rgba(0,0,0,.3));
  backdrop-filter: drop-shadow(0 0 transparent);
  border-radius: var(--p-popover-radius,var(--p-radius-lg));
  background: var(--p-color-canvas);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  width: var(--p-popover-w,max-content);
  height: var(--p-popover-h,auto);
  min-width: var(--p-popover-min-w,0px);
  min-height: var(--p-popover-min-h,auto);
  max-width: var(--p-popover-max-w,min(calc(100dvw - 16px), 48ch));
  max-height: var(--p-popover-max-h,calc(100dvh - 16px));
  opacity: 1;
  transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in);
  overlay: none;
  display: none;
}
[popover]:popover-open {
  overlay: auto;
  display: grid;
}
[popover]::backdrop {
  display: none;
}
@media(forced-colors:active) {
  button::after {
    background: CanvasText;
  }
  button:focus-visible {
    outline-color: Highlight;
  }
  [popover] {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}

@media(hover:hover) {
  button:hover {
    background: var(--p-color-frosted-soft);
  }
}

@supports (color: oklch(from red l c h)) {
  [popover] {
    background: hsl(from var(--p-color-canvas) h 0% calc(l + 14));
  }
}

@supports (overlay: auto) and (transition-behavior: allow-discrete) {
  [popover] {
    transition: opacity var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in),overlay var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in) allow-discrete,display var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in) allow-discrete;
  }
}

.arrow {
  position: absolute;
  width: 24px;
  height: 12px;
  clip-path: polygon(50% 0, 100% 110%, 0 110%);
  background: inherit;
}
@media(forced-colors:active) {
  .arrow {
    background: CanvasText;
  }
}

@starting-style {
  [popover] {
    opacity: 0;
  }
}"
`;
